--- a/.github/actions/check-ruby/action.yml
+++ b/.github/actions/check-ruby/action.yml
@@ -1,6 +1,14 @@
 name: "Check Ruby version and setup branch"
 description: "Check Ruby Version and setup branch"
 
+outputs:
+  TARGET_RUBY_VERSION:
+    description: 'Ouput Ruby Version'
+    value: ${{steps.get-ruby-version.outputs.TARGET_RUBY_VERSION}}
+  RUBY_UPDATED:
+    description: 'If ruby version is updated from that which the reop uses.'
+    value: ${{steps.get-ruby-version.outputs.RUBY_UPDATED}}
+
 runs:
   using: composite
   steps:
