--- a/.github/workflows/bump-ruby-version.yml
+++ b/.github/workflows/bump-ruby-version.yml
@@ -24,6 +24,8 @@ jobs:
       id: setup-branch
       if: ${{ steps.check-ruby.outputs.RUBY_UPDATED }} == 'true'
       uses: ./.github/actions/setup-branch
+      env:
+        TARGET_RUBY_VERSION: ${{ steps.check-ruby.outputs.TARGET_RUBY_VERSION }}
 
   upgrade-ruby:
     runs-on: ubuntu-latest
