--- a/.github/actions/setup-branch/action.yml
+++ b/.github/actions/setup-branch/action.yml
@@ -19,7 +19,8 @@ runs:
     shell: bash
     run: |
       if git ls-remote --exit-code --heads origin " ${{ steps.set-branch-name.COMMIT_BRANCH }}"; then
-        git checkout ${{ steps.set-branch-name.outputs.COMMIT_BRANCH }}
+        echo "branch already exists ${{ steps.set-branch-name.outputs.COMMIT_BRANCH }}"
       else
-        git checkout -b ${{ steps.set-branch-name.outputs.COMMIT_BRANCH }}
+        git branch ${{ steps.set-branch-name.outputs.COMMIT_BRANCH }}
+        git push -u origin  HEAD
       fi
