--- a/.github/workflows/bump-ruby-version.yml
+++ b/.github/workflows/bump-ruby-version.yml
@@ -59,6 +59,8 @@ jobs:
       env:
          TARGET_RUBY_VERSION: ${{ needs.check-ruby-setup.outputs.TARGET_RUBY_VERSION }}
          COMMIT_BRANCH: ${{ needs.check-ruby-setup.outputs.COMMIT_BRANCH }}
+         RUBY_UPDATED: ${{ needs.check-ruby-setup.outputs.RUBY_UPDATED}}
       uses: ./.github/actions/commit-changes
+      if: ${{ env.RUBY_UPDATED }} == 'true'
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
