--- a/.github/actions/setup-branch/action.yml
+++ b/.github/actions/setup-branch/action.yml
@@ -9,12 +9,15 @@ outputs:
 runs:
   using: composite
   steps:
+  # use Ruby version to create the branch name send send to output.
   - name: set branch name
     id: set-branch-name
     shell: bash
     run: |
       echo "COMMIT_BRANCH=update-to-ruby-${{ env.TARGET_RUBY_VERSION }}" >> $GITHUB_OUTPUT
 
+  # Check if branch exists, if not, create it, also push it up as the
+  # workspace can't be access from another job.
   - name: Create or checkout branch
     shell: bash
     run: |
