--- a/.github/workflows/bump-ruby-version.yml
+++ b/.github/workflows/bump-ruby-version.yml
@@ -12,6 +12,7 @@ jobs:
       TARGET_RUBY_VERSION: ${{ steps.check-ruby.outputs.TARGET_RUBY_VERSION }}
       RUBY_UPDATED: ${{ steps.check-ruby.outputs.RUBY_UPDATED }}
       COMMIT_BRANCH: ${{ steps.setup-branch.outputs.COMMIT_BRANCH }}
+      RUBY_PATHS: ${{ steps.check-ruby.outputs.RUBY_PATHS }}
     steps:
     - name: Check out code
       uses: actions/checkout@v4
@@ -20,6 +21,7 @@ jobs:
     - name: Check Ruby Version
       id: check-ruby
       uses: ./.github/actions/check-ruby
+
     - name: Setup github branch for Ruby Updates
       id: setup-branch
       if: ${{ steps.check-ruby.outputs.RUBY_UPDATED }} == 'true'
@@ -30,6 +32,9 @@ jobs:
   upgrade-ruby:
     runs-on: ubuntu-latest
     needs: [check-ruby-setup]
+    strategy:
+      matrix:
+        ruby-paths: ${{fromJSON(needs.check-ruby-setup.outputs.RUBY_PATHS)}}
     steps:
     - name: Check out code
       uses: actions/checkout@v4
@@ -44,7 +49,7 @@ jobs:
        if: ${{ env.RUBY_UPDATED }} == 'true'
        uses: ./.github/actions/update-ruby
        with:
-          ruby-path: '.'
+          ruby-path: ${{ matrix.ruby-paths }}
 
   commit-changes:
     runs-on: ubuntu-latest
