--- a/.github/actions/check-ruby/action.yml
+++ b/.github/actions/check-ruby/action.yml
@@ -31,9 +31,9 @@ runs:
     shell: bash
     id: find-ruby-envs
     run: |
-      echo "$(find -type f -name '.ruby-version' -exec dirname {} \; | tr '\n' ',' | sed 's/, *$//')"
       r_paths=$(find -type f -name ".ruby-version" -exec dirname {} \; | tr '\n' ',' | sed 's/, *$//')
-      paths_array=$(${r_paths//,/ })
+      paths_array=(${r_paths//,/ })
+      echo "paths $paths_array"
       echo "RUBY_PATHS=[$r_paths]" >> $GITHUB_OUTPUT
       echo "paths ${paths_array[0]}"
 
