--- a/.github/actions/check-ruby/action.yml
+++ b/.github/actions/check-ruby/action.yml
@@ -33,7 +33,7 @@ runs:
     run: |
       r_paths=$(find -type f -name ".ruby-version" -exec dirname {} \; | tr '\n' ',' | sed 's/, *$//')
       paths_array=(${r_paths//,/ })
-      first_path=$(${paths_array[0]}) >> $GITHUB_ENV
+      first_path=(${paths_array[0]}) >> $GITHUB_ENV
       echo "RUBY_PATHS=[$r_paths]" >> $GITHUB_OUTPUT
       echo "First Path $first_path and paths $RUBY_PATHS"
 
