--- a/.github/actions/check-ruby/action.yml
+++ b/.github/actions/check-ruby/action.yml
@@ -35,14 +35,14 @@ runs:
       paths_array=(${r_paths//,/ })
       first_path=(${paths_array[0]}) >> $GITHUB_ENV
       echo "RUBY_PATHS=[$r_paths]" >> $GITHUB_OUTPUT
-      echo "First Path $first_path and paths $RUBY_PATHS"
+      echo "First Path $first_path and paths [$r_paths]"
 
   # get the first path from the paths array, set output variable to true if version different to that stored.
   - name: Check if Ruby is updated
     shell: bash
     id: ruby-updated
     run: |
-      if grep -q "${{ steps.get-ruby-version.outputs.TARGET_RUBY_VERSION }}" "${{env.first_path}}/.ruby-version" ; then
+      if grep -q "${{ steps.get-ruby-version.outputs.TARGET_RUBY_VERSION }}" "$first_path/.ruby-version" ; then
         echo "Ruby Version Match, nothing to do, exit with success."
         echo "RUBY_UPDATED=false" >> $GITHUB_OUTPUT
       else
