--- a/.github/actions/check-ruby/action.yml
+++ b/.github/actions/check-ruby/action.yml
@@ -31,11 +31,15 @@ runs:
     shell: bash
     id: find-ruby-envs
     run: |
-      r_paths=$(find -type f -name ".ruby-version" -exec dirname {} \; | tr '\n' ',' | sed 's/, *$//')
-      paths_array=(${r_paths//,/ })
-      first_element=(${paths_array[0]})
-      echo "first_path=${paths_array[0]}"  >> $GITHUB_ENV
+      ## Create Path Array
+      paths_array=$(find -type f -name ".ruby-version" -exec dirname {} \;)
+      ## Convert array to line string, Quote each element, replace \n with , and remove training ,
+      r_paths=$(paths_array | sed 's/^\(.*\)$/"&"/g' | tr '\n' ',' | sed 's/, *$//')
+      ## export first element, used to find initial ruby env
+      echo "first_path=${paths_array[0]}" >> $GITHUB_ENV
+      ## export string encase in [] for used in matrix input.
       echo "RUBY_PATHS=[$r_paths]" >> $GITHUB_OUTPUT
+      ## for debug only.
       echo "First Path ${{env.first_path}} and paths [$r_paths]"
 
   # get the first path from the paths array, set output variable to true if version different to that stored.
