--- a/.github/actions/check-ruby/action.yml
+++ b/.github/actions/check-ruby/action.yml
@@ -34,7 +34,7 @@ runs:
       ## Create Path Array
       paths_array=$(find -type f -name ".ruby-version" -exec dirname {} \;)
       ## Convert array to line string, Quote each element, replace \n with , and remove training ,
-      r_paths=$paths_array | sed 's/^\(.*\)$/"&"/g' | tr '\n' ',' | sed 's/, *$//')
+      r_paths=$paths_array | sed 's/^\(.*\)$/"&"/g' | tr '\n' ',' | sed 's/, *$//'
       ## export first element, used to find initial ruby env
       echo "first_path=${paths_array[0]}" >> $GITHUB_ENV
       ## export string encase in [] for used in matrix input.
