--- a/.github/actions/check-ruby/action.yml
+++ b/.github/actions/check-ruby/action.yml
@@ -40,7 +40,7 @@ runs:
       ## export string encase in [] for used in matrix input.
       echo "RUBY_PATHS=[$r_paths]" >> $GITHUB_OUTPUT
       ## for debug only.
-      echo "First Path ${{env.first_path}} and paths [$r_paths]"
+      echo "First Path ${paths_array[0]} and paths [$r_paths]"
 
   # get the first path from the paths array, set output variable to true if version different to that stored.
   - name: Check if Ruby is updated
