--- a/.github/actions/check-ruby/action.yml
+++ b/.github/actions/check-ruby/action.yml
@@ -20,7 +20,8 @@ runs:
     id: get-ruby-version
     shell: bash
     run: |
-      LATEST_RUBY=$(curl -s https://api.github.com/repos/ruby/ruby/releases/latest | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/' | tr '_' '.')
+      #LATEST_RUBY=$(curl -s https://api.github.com/repos/ruby/ruby/releases/latest | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/' | tr '_' '.')
+      LATEST_RUBY=3.4.5
       echo "TARGET_RUBY_VERSION=$LATEST_RUBY" >> $GITHUB_OUTPUT
 
   # find all the ruby environments, convert new line to comma,
@@ -30,16 +31,32 @@ runs:
     shell: bash
     id: find-ruby-envs
     run: |
-      r_paths=$(find . -name '.ruby-version' -exec dirname {} \; | tr '\n' ',' | sed 's/, *$//')
-      paths_array=(${r_paths//,/ })
-      echo "RUBY_PATHS=[$r_paths]" >> $GITHUB_OUTPUT
+      ## Create Path Array
+      paths_array=$(find -type f -name ".ruby-version" -exec dirname {} \;)
+      ## create empty json array
+      json_elements=()
+      # Iterate through each discovered path.
+      for path in "${paths_array[@]}"; do
+        # This makes it a valid string element within a JSON array.
+        json_elements+=("\"$path\"")
+      done
+      ## Create a string by joining the elements
+      json_array="[$(IFS=','; echo "${json_elements[*]}")]"
+
+      echo "should see path string here 1: $json_array 2: ${paths_array[@]}"
+      ## export first element, used to find initial ruby env
+      echo "first_path=${paths_array[0]}" >> $GITHUB_ENV
+      ## export string encase in [] for used in matrix input.
+      echo "RUBY_PATHS=[$json_array]" >> $GITHUB_OUTPUT
+      ## for debug only.
+      echo "First Path ${paths_array[0]} and paths [$json_array]"
 
   # get the first path from the paths array, set output variable to true if version different to that stored.
   - name: Check if Ruby is updated
     shell: bash
     id: ruby-updated
     run: |
-      if grep -q "${{ steps.get-ruby-version.outputs.TARGET_RUBY_VERSION }}" "${paths_array[0]}/.ruby-version" ; then
+      if grep -q "${{ steps.get-ruby-version.outputs.TARGET_RUBY_VERSION }}" "${{env.first_path}}/.ruby-version" ; then
         echo "Ruby Version Match, nothing to do, exit with success."
         echo "RUBY_UPDATED=false" >> $GITHUB_OUTPUT
       else
