--- a/.github/workflows/bump-ruby-version.yml
+++ b/.github/workflows/bump-ruby-version.yml
@@ -36,8 +36,8 @@ jobs:
     needs: [check-ruby-setup]
     strategy:
       matrix:
-        #ruby-paths: ${{fromJson(needs.check-ruby-setup.outputs.RUBY_PATHS)}}
-        ruby-paths: ${{fromJson('[\".\"]') }}
+        ruby-paths: ${{fromJson(needs.check-ruby-setup.outputs.RUBY_PATHS)}}
+        #ruby-paths: ${{fromJson('[\".\"]') }}
     steps:
 
     - name: Check out code
