--- a/.github/actions/update-ruby/action.yml
+++ b/.github/actions/update-ruby/action.yml
@@ -13,7 +13,7 @@ runs:
   # Pull update from git, switch to branch
   - name: checkout update branch
     shell: bash
-    run: git fetch && git switch ${{ env.COMMIT_BRANCH }} && git pull
+    run: git fetch && git switch ${{ env.COMMIT_BRANCH }}
 
   # switch to the directory of the given ruby environment.
   - name: move to ruby path/directory
@@ -79,7 +79,7 @@ runs:
       #if git ls-remote --exit-code --heads origin " ${{ env.COMMIT_BRANCH }}"; then
       #  git push origin --delete "${{ env.COMMIT_BRANCH}}"
       #fi
-
+      git pull
       git add .
       git commit -m "Update Ruby to version ${{ env.TARGET_RUBY_VERSION }} for ${{inputs.ruby-path}}"
       git push origin ${{ env.COMMIT_BRANCH}}
