--- a/.github/actions/commit-changes/action.yml
+++ b/.github/actions/commit-changes/action.yml
@@ -10,10 +10,19 @@ inputs:
 runs:
   using: composite
   steps:
-  # Pull update from git, switch to branch
-  - name: checkout update branch
+
+  # commit and push the changes to the branch, again the PR can't access this workspace.
+  - name: Commit changes
     shell: bash
-    run: git fetch && git switch ${{ env.COMMIT_BRANCH }}
+    run: |
+      git config --local user.email "github-actions[bot]@users.noreply.github.com"
+      git config --local user.name "github-actions[bot]"
+      #if git ls-remote --exit-code --heads origin " ${{ env.COMMIT_BRANCH }}"; then
+      #  git push origin --delete "${{ env.COMMIT_BRANCH}}"
+      #fi
+      git add .
+      git commit -m "Update Ruby to version ${{ env.TARGET_RUBY_VERSION }}"
+      git push origin ${{ env.COMMIT_BRANCH}}
 
   # create a draft pull request, this is because, by a github design, workflows can not trigger
   # other workflows, unless a PAT, SSH ect is used to trigger, which isn't done here, yet.
@@ -21,7 +30,7 @@ runs:
   - name: Create Pull Request
     shell: bash
     run: |
-      PR_BODY="This PR updates the Ruby version to $TARGET_RUBY_VERSION.
+      PR_BODY="This PR updates the Ruby version to ${{ env.TARGET_RUBY_VERSION }}.
 
       Changes made:
       - Updated .ruby-version file
@@ -32,18 +41,11 @@ runs:
       Please review and test before merging."
 
       gh pr create \
-        --title "Update Ruby to version $TARGET_RUBY_VERSION" \
+        --title "Update Ruby to version ${{ env.TARGET_RUBY_VERSION }}" \
         --body "$PR_BODY" \
         --base master \
-        --head $COMMIT_BRANCH \
+        --head ${{ env.COMMIT_BRANCH }}\
         --draft
 
     env:
       GH_TOKEN: ${{ inputs.github-token }}
-      #GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      #    steps:
-      #      - uses: actions/checkout@v4
-      #      - uses: andrew/ruby-upgrade-action@main
-      #        with:
-      #          github-token: ${{ secrets.GITHUB_TOKEN }}
